# bookstore

./: .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 928fa3ec50ad_initial.py  b51412ac4808_initial.py  d3c744f1b350_init_tables.py
book_store/: app.py  create_tables.py  main.py
book_store/api/: TODO.md  router.py
book_store/api/books/: handlers.py  routes.py
book_store/api/users/: handlers.py  routes.py
book_store/books/: __init__.py  book_models.py  handlers.py  routes.py  services.py
book_store/core/: config.py  database.py  tables.py
book_store/core/tables/: book_tables.py  user_tables.py
book_store/docker/: Dockerfile
book_store/infrastructure/: repository_books.py  repository_users.py
book_store/models/: book_models.py  user_models.py
book_store/services/: books.py  users.py
book_store/tests/: test_books.py  test_users.py
book_store/users/: handlers.py  routes.py  services.py  user_models.py
book_store/users/application/: handlers.py  service.py
book_store/users/domain/: book.py  database.py  user.py
bookstore/: .gitignore  settings.py  urls.py
docs/: how_to_run_the_project.md  setup_of_the_project.md  stack_of_technologies.md  work_colaborbation.md
tests/: conftest.py  test_books.py  test_database.py  test_users.py
users/: views.py
