[project]
name = "bookstore"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Limarchuk",email = "nikita.limarchuk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flack = "^1.3.7"
flake8 = "^7.3.0"
pre-commit = "^4.2.0"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120