[project]
name = "bookstore"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Limarchuk",email = "nikita.limarchuk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flack = "^1.3.7"
flake8 = "^7.3.0"
pre-commit = "^4.2.0"
mypy = "^1.17.0"

[tool.poetry]
packages = [
    { include = "book_store" }
]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120