[project]
name = "bookstore"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Limarchuk",email = "nikita.limarchuk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "databases[asyncpg] (>=0.9.0,<0.10.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pre-commit = "^4.2.0"
mypy = "^1.17.0"
types-ujson = "^5.10.0.20250326"
types-requests = "^2.32.4.20250611"

[tool.poetry]
packages = [
    { include = "book_store" }
]

[tool.black]
line-length = 120
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
